# funasr-cpp-arm

./: .gitignore  CMakeLists.txt  README.md  hotwords.txt
onnxruntime/: CMakeLists.txt
onnxruntime/src/: CMakeLists.txt  audio.cpp
ts/: package.json  tsconfig.json
ts/src/: concurrent_test.ts
