
file(GLOB files1 "*.cpp")
if(APPLE)
    file(GLOB itn_files "itn-*.cpp")
    list(REMOVE_ITEM files1 ${itn_files})
endif(APPLE)
list(REMOVE_ITEM files1 "${CMAKE_CURRENT_SOURCE_DIR}/paraformer-torch.cpp")
set(files ${files1})

if(GPU)
    set(files ${files} "${CMAKE_CURRENT_SOURCE_DIR}/paraformer-torch.cpp")
endif()

message("files: "${files})

if(WIN32)
add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/execution-charset:utf-8>")
add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/source-charset:utf-8>")
add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/bigobj>")
endif()

add_library(funasr SHARED ${files})

if(WIN32)
    set(EXTRA_LIBS yaml-cpp csrc kaldi-decoder fst glog gflags avutil avcodec avformat swresample onnxruntime)
    include_directories(${PROJECT_SOURCE_DIR}/third_party/onnxruntime-linux-x64-1.14.0/include)
    include_directories(${PROJECT_SOURCE_DIR}/third_party/ffmpeg-master-latest-linux64-gpl-shared/include)
    target_link_directories(funasr PUBLIC ${PROJECT_SOURCE_DIR}/third_party/onnxruntime-linux-x64-1.14.0/lib)
    target_link_directories(funasr PUBLIC ${PROJECT_SOURCE_DIR}/third_party/ffmpeg-master-latest-linux64-gpl-shared/lib)
    target_compile_definitions(funasr PUBLIC -D_FUNASR_API_EXPORT -DNOMINMAX -DYAML_CPP_DLL)
else()
    set(EXTRA_LIBS pthread yaml-cpp csrc kaldi-decoder fst glog gflags avutil avcodec avformat swresample)
    include_directories(${PROJECT_SOURCE_DIR}/third_party/onnxruntime-linux-x64-1.14.0/include)
    include_directories(${PROJECT_SOURCE_DIR}/third_party/ffmpeg-master-latest-linux64-gpl-shared/include)
    if(APPLE)
        target_link_directories(funasr PUBLIC ${PROJECT_SOURCE_DIR}/third_party/onnxruntime-linux-x64-1.14.0/lib)
        target_link_directories(funasr PUBLIC ${PROJECT_SOURCE_DIR}/third_party/ffmpeg-master-latest-linux64-gpl-shared/lib)
    endif(APPLE)    
endif()

if(GPU)
    set(TORCH_DEPS torch torch_cuda torch_cpu c10 c10_cuda torch_blade ral_base_context)
endif()

#message("CXX_FLAGS "${CMAKE_CXX_FLAGS})
include_directories(${CMAKE_SOURCE_DIR}/include)
include_directories(${CMAKE_SOURCE_DIR}/third_party)
target_link_libraries(funasr PUBLIC onnxruntime ${EXTRA_LIBS} ${TORCH_DEPS})
